# youtube

./: .gitignore  README.md  channel.yaml  dictionary.yaml  pyproject.toml
.claude/: launch.json
assets/: readings_common.yaml
assets/bgm/: SOURCES.md
assets/characters/: SOURCES.md
assets/clips/: SOURCES.md
automation/: README.md
automation/n8n/: auto_build.json  upload_youtube.json
docs/: DESIGN.md  WORKFLOW.md
ideas/: backlog.yaml
projects/auto-door/: script.yaml
projects/banknote/: script.yaml
projects/battery-80/: script.yaml
prompts/: ideas.md  script.md
scripts/: auto_build.sh  check_readings.py  export_tsumugi_sprites.py  export_zundamon_sprites.py  fix_narrator_particles.py  gen_banknote_extras.py  gen_battery_anim.py  gen_battery_anim_duo.py  gen_door_extras.py  gen_drama_bgs.py  gen_duo_extras.py  gen_escalator_extras.py  gen_flash_compare.py  gen_flash_extras.py  gen_gate_extras.py  gen_gc_bgs.py  gen_gc_extras.py  gen_gm_extras.py  gen_infographics.py  gen_ks_bgs.py  gen_ks_extras.py  gen_ks_meme_extras.py  gen_momofuku_extras.py  gen_momofuku_meme_extras.py  gen_momofuku_v2_extras.py  gen_noodle_extras.py  gen_qr_bgs.py  gen_qr_drama_extras.py  gen_qr_extras.py  gen_qr_meme_extras.py  gen_rc_bgs.py  gen_rc_extras.py  gen_signal_extras.py  import_sprites.py  next_upload.py  setup_mac.sh  smoke_test.sh
ytf/: __init__.py  assets_gen.py  bgm.py  build.py  cli.py  compose.py  config.py  editor.html  editor.py  ideas.py  llm.py  media.py  metadata.py  mobgen.py  op.py  qc.py  schema.py  scripting.py  subtitles.py  thumbnail.py  voice.py
(+71 files in other folders)
