[project]
name = "yt-factory"
version = "0.1.0"
description = "顔出しなし解説チャンネル向け 動画量産パイプライン (VOICEVOX + FFmpeg)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "Pillow>=10.0",
    "requests>=2.28",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
qc = ["openai-whisper"]

[project.scripts]
ytf = "ytf.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ytf"]

[tool.setuptools.package-data]
ytf = ["*.html"]
